# aoc-rs

./: Cargo.toml  README.org  flake.nix
.github/workflows/: ci-nix.yml
src/: main.rs
src/y2020/: day01.rs
src/y2022/: day01.rs
