[package]
authors = ["Tyler Langlois"]
edition = "2018"
name = "aoc-rs"
version = "0.1.0"

[dependencies]
clap = "2.33.3"
itertools = "0.10.5"
pom = "3.2.0"
structopt = "0.3.26"

[package.metadata.nix]
app = true
build = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
